[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/art/ui_panel.png" type="Texture" id=1]
[ext_resource path="res://assets/art/ui_pane_ppl.png" type="Texture" id=2]
[ext_resource path="res://assets/art/ui_pane_pathsl.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/little-conquest.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://ui/UI.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 8
outline_size = 1
outline_color = Color( 0.105882, 0.0666667, 0.121569, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 32
outline_color = Color( 0.580392, 0.470588, 0.635294, 1 )
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[node name="UI" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Control"]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/margin_top = 5
custom_constants/margin_left = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 40.0
margin_bottom = 41.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
margin_right = 35.0
margin_bottom = 16.0

[node name="TextureRect" type="TextureRect" parent="Control/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="Control/MarginContainer/VBoxContainer/HBoxContainer/TextureRect"]
margin_right = 40.0
margin_bottom = 16.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 20.0
margin_top = 4.0
margin_right = 26.0
margin_bottom = 11.0
custom_colors/font_color = Color( 0.945098, 0.847059, 0.968627, 1 )
custom_fonts/font = SubResource( 1 )
text = "10"

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 35.0
margin_bottom = 36.0

[node name="TextureRect2" type="TextureRect" parent="Control/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="Control/MarginContainer/VBoxContainer/HBoxContainer2/TextureRect2"]
margin_right = 40.0
margin_bottom = 16.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Control/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 20.0
margin_top = 4.0
margin_right = 26.0
margin_bottom = 11.0
custom_colors/font_color = Color( 0.945098, 0.847059, 0.968627, 1 )
custom_fonts/font = SubResource( 1 )
text = "10"

[node name="Label3" type="Label" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -21.0
margin_top = 6.0
margin_bottom = 7.0
custom_colors/font_color = Color( 0.945098, 0.847059, 0.968627, 1 )
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.788235, 0.913725, 0.886275, 1 )
custom_colors/font_color_hover = Color( 0.639216, 0.898039, 0.831373, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
disabled = true
text = "Retry?"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Control/Button" to="." method="_on_Button_pressed"]
